<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/small_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_loading"
            cardView:layout_constraintDimensionRatio="H,16:9"
            cardView:layout_constraintEnd_toEndOf="parent"
            cardView:layout_constraintStart_toStartOf="parent"
            cardView:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/image_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:lines="2"
            android:maxLines="3"
            android:padding="5dp"
            android:text="@string/loading_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintEnd_toEndOf="parent"
            cardView:layout_constraintStart_toStartOf="parent"
            cardView:layout_constraintTop_toBottomOf="@id/small_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


