<resources>
    <string name="app_name">Netgear Mobile Developer Exercise 2021</string>
    <string name="image_manifest">Image Manifest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_arrow_back">⇜ Back</string>
    <string name="loading_image">Loading Image</string>
</resources>